[package]
name = "kgx_rust"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
bitflags = "1.1"
serde_json = "1"
async-trait = "0.1.36"
regex = "0.1"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
features = ["framework", "standard_framework"]